[project]
name = "universcale"
license = "MIT"
license-files = ["LICENSE"]
version = "0.1.0"
requires-python = ">=3.12"
description = "Universal Scalability Law tooling: fit capacity curves and find bottlenecks from traces."
dependencies = []

[project.scripts]
universcale = "universcale.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
